# BareBrain

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_CN.md  README_JA.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: build-firmware.yml  build.yml
docs/: ARCHITECTURE.md  EXTERNAL_MOD_BUILD.md  MEMORY_ARCHITECTURE.md  MOD_DEVELOPMENT_SPEC.md  PLUGIN_MODULAR_ARCHITECTURE.md  TODO.md  TW_TTS.md  WIFI_ONBOARDING_AP.md  WIRING.md
docs/im-integration/: FEISHU_SETUP.md  README.md
docs/tool-setup/: README.md  TAVILY_SETUP.md
main/: CMakeLists.txt  brn.c  brn_config.h  brn_secrets.h.example  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  context_builder.c  context_builder.h
main/bus/: message_bus.c  message_bus.h
main/channels/feishu/: README.md  feishu_bot.c  feishu_bot.h
main/channels/relay/: relay_client.c  relay_client.h  relay_config.c  relay_config.h
main/cli/: serial_cli.c
main/core/mod/: brn_mod.h  brn_mod_manager.c  brn_mod_manager.h
main/cron/: cron_service.c
main/external_mods/: README.md
main/feedback/: face_state.c  face_state.h
main/gateway/: ws_server.c  ws_server.h
main/heartbeat/: heartbeat.c
main/llm/: llm_endpoint.c  llm_endpoint.h  llm_proxy.c  llm_proxy.h
main/memory/: memory_index.c  memory_index.h  memory_model.c  memory_model.h  memory_store.c  memory_store.h  memory_worker.c  memory_worker.h  memory_worker_item.c  memory_worker_item.h  session_mgr.c  session_mgr.h
main/mods/: builtin_mods.c  builtin_mods.h
main/mods/tool_cron/: README.md  barebrain.mod.json
main/mods/tool_cron/src/: mod_tool_cron.c  tool_cron.c
main/mods/tool_files/: README.md  barebrain.mod.json
main/mods/tool_files/src/: mod_tool_files.c  tool_files.c  tool_files.h
main/mods/tool_get_time/: README.md  barebrain.mod.json
main/mods/tool_get_time/src/: mod_tool_get_time.c
main/mods/tool_gpio/: README.md  barebrain.mod.json
main/mods/tool_gpio/src/: mod_tool_gpio.c  tool_gpio.c
main/mods/tool_memory/: README.md  barebrain.mod.json
main/mods/tool_memory/src/: mod_tool_memory.c  tool_memory.c  tool_memory.h
main/mods/tool_tts/: README.md  barebrain.mod.json
main/mods/tool_tts/src/: mod_tool_tts.c  tool_tts.c
main/mods/tool_web_search/: README.md  barebrain.mod.json
main/mods/tool_web_search/src/: mod_tool_web_search.c  tool_web_search.c
main/onboard/: onboard_html.h  wifi_onboard.c
main/proxy/: http_proxy.c
main/skills/: skill_loader.c
main/storage/: storage_fs.c  storage_fs.h  storage_manager.c  storage_manager.h
main/tools/: gpio_policy.c  gpio_policy.h  tool_cron.c  tool_files.c  tool_files.h  tool_get_time.c  tool_gpio.c  tool_memory.c  tool_memory.h  tool_registry.c  tool_registry.h  tool_tts.c  tool_tts.h  tool_web_search.c
main/voice/: tts_backend.h  tts_twtts.c  tts_twtts.h  voice_tts.c  voice_tts.h
main/wifi/: wifi_manager.c
scripts/: generate_mod_registry.py  generate_profile_config.py  prepare_external_mods.py
scripts/tests/: test_generate_mod_registry.py
skills/deploy/: SKILL.md
skills/deploy/scripts/: deploy.sh  validate.sh
spiffs_data/config/: SOUL.md  USER.md
spiffs_data/memory/: MEMORY.md
spiffs_data/skills/: daily-briefing.md  skill-creator.md
