idf_component_register(
    SRCS
        "brn.c"
        "bus/message_bus.c"
        "wifi/wifi_manager.c"
        "channels/feishu/feishu_bot.c"
        "llm/llm_endpoint.c"
        "llm/llm_proxy.c"
        "agent/agent_loop.c"
        "agent/context_builder.c"
        "memory/memory_store.c"
        "memory/memory_index.c"
        "memory/memory_model.c"
        "memory/memory_worker_item.c"
        "memory/memory_worker.c"
        "memory/session_mgr.c"
        "storage/storage_manager.c"
        "storage/storage_fs.c"
        "voice/voice_tts.c"
        "voice/tts_twtts.c"
        "gateway/ws_server.c"
        "cli/serial_cli.c"
        "proxy/http_proxy.c"
        "cron/cron_service.c"
        "heartbeat/heartbeat.c"
        "core/mod/brn_mod_manager.c"
        "tools/tool_registry.c"
        "mods/builtin_mods.c"
        "mods/tool_get_time/src/mod_tool_get_time.c"
        "mods/tool_files/src/mod_tool_files.c"
        "mods/tool_tts/src/mod_tool_tts.c"
        "mods/tool_gpio/src/mod_tool_gpio.c"
        "mods/tool_cron/src/mod_tool_cron.c"
        "mods/tool_cron/src/tool_cron.c"
        "mods/tool_web_search/src/mod_tool_web_search.c"
        "mods/tool_web_search/src/tool_web_search.c"
        "mods/tool_memory/src/mod_tool_memory.c"
        "mods/tool_memory/src/tool_memory.c"
        "mods/tool_get_time/src/tool_get_time.c"
        "mods/tool_files/src/tool_files.c"
        "mods/tool_gpio/src/tool_gpio.c"
        "mods/tool_tts/src/tool_tts.c"
        "tools/gpio_policy.c"
        "skills/skill_loader.c"
        "onboard/wifi_onboard.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash esp_wifi esp_netif esp_http_client esp_http_server
        esp_https_ota esp_event json spiffs fatfs console vfs app_update esp-tls
        esp_timer esp_websocket_client esp_driver_gpio esp_driver_uart esp_driver_sdmmc sdmmc
)
